components/printing/browser/print_composite_client.cc
@@ -68,6 +68,21 @@ void PrintCompositeClient::OnDidPrintFrameContent(
     content::RenderFrameHost* render_frame_host,
     int document_cookie,
     const PrintHostMsg_DidPrintContent_Params& params) {
+  auto* outer_contents = web_contents()->GetOuterWebContents();
+  if (outer_contents) {
+    // When the printed content belongs to an extension or app page, the print
+    // composition needs to be handled by its outer content.
+    // TODO(weili): so far, we don't have printable web contents nested in more
+    // than one level. In the future, especially after PDF plugin is moved to
+    // OOPIF-based webview, we should check whether we need to handle web
+    // contents nested in multiple layers.
+    auto* outer_client = PrintCompositeClient::FromWebContents(outer_contents);
+    DCHECK(outer_client);
+    outer_client->OnDidPrintFrameContent(render_frame_host, document_cookie,
+                                         params);
+    return;
+  }
+
   // Content in |params| is sent from untrusted source; only minimal processing
   // is done here. Most of it will be directly forwarded to pdf compositor
   // service.
